--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/lato": "^0.1.0",
+    "@expo-google-fonts/oswald": "^0.1.0",
     "expo": "~46.0.16",
+    "expo-font": "~10.2.0",
     "expo-status-bar": "~1.4.0",
-    "react": "18.0.0",
-    "react-native": "0.69.6"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-native": "0.69.6",
+    "react-native-paper": "^4.12.5",
+    "styled-components": "^5.3.6",
+    "react-native-svg": "12.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
